crates/solidity/testing/snapshots/bindings_output/using/global_and_local/generated/0.8.8-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

References and definitions: 
   ╭─[main.sol:1:1]
   │
 3 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 4 │     using AmountLib for Amount;
   │           ────┬────     ───┬──  
   │               ╰───────────────── unresolved
   │                            │    
   │                            ╰──── ref: 4
   │ 
 6 │     function test() public pure {
   │              ──┬─  
   │                ╰─── name: 2
 7 │         Amount x;
   │         ───┬── ┬  
   │            ╰────── ref: 4
   │                │  
   │                ╰── name: 3
 8 │         x.nop().min();
   │         ┬ ─┬─   ─┬─  
   │         ╰──────────── ref: 3
   │            │     │   
   │            ╰───────── unresolved
   │                  │   
   │                  ╰─── unresolved
 9 │         x.min();
   │         ┬ ─┬─  
   │         ╰────── ref: 3
   │            │   
   │            ╰─── unresolved
───╯
Definiens: 
    ╭─[main.sol:1:1]
    │
  2 │ ╭───▶ 
    ┆ ┆     
  5 │ │ ╭─▶ 
    ┆ ┆ ┆   
  7 │ │ │           Amount x;
    │ │ │   ─────────┬────────  
    │ │ │            ╰────────── definiens: 3
    ┆ ┆ ┆   
 10 │ │ ├─▶     }
    │ │ │           
    │ │ ╰─────────── definiens: 2
 11 │ ├───▶ }
    │ │         
    │ ╰───────── definiens: 1
────╯
Parse errors:
Error: Expected AddressKeyword or BoolKeyword or BytesKeyword or ContractKeyword or EnumKeyword or ErrorKeyword or FixedKeyword or FunctionKeyword or Identifier or ImportKeyword or IntKeyword or InterfaceKeyword or LibraryKeyword or MappingKeyword or PragmaKeyword or StringKeyword or StructKeyword or TypeKeyword or UfixedKeyword or UintKeyword.
    ╭─[lib.sol:3:1]
    │
  3 │ ╭─▶ using {min} for Amount global;
    ┆ ┆   
 13 │ ├─▶ }
    │ │       
    │ ╰─────── Error occurred here.
────╯
References and definitions: 
   ╭─[lib.sol:1:1]
   │
 1 │ type Amount is uint64;
   │      ───┬──  
   │         ╰──── name: 4
───╯
Definiens: 
   ╭─[lib.sol:1:1]
   │
 1 │ type Amount is uint64;
   │ ───────────┬───────────  
   │            ╰───────────── definiens: 4
───╯
